--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -5,10 +5,10 @@
     bottom: 0;
     right: 0;
     
-    overflow-y: auto;
-
-    ::-webkit-scrollbar {
-        display: none;
-    }
+    overflow-y: scroll;
     scrollbar-width: none;
+}
+
+.scrolling::-webkit-scrollbar {
+    display: none;
 }
